# audio

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ASR_DICTIONARY_PLAN.md
scripts/: load_seeds.py  test_dictionary.py
seeds/: tier_a_core.json  tier_b_running.json  tier_c_veeva.json  tier_d_asr_tech.json  tier_e_health.json  tier_f_investing.json  tier_g_travel.json  tier_h_gear.json  tier_lovecraft.json
seeds/contexts/: asr_dev.json  health.json  lovecraft.json  running.json  work.json
src/asr/: __init__.py  cli.py  config.py  logging.py
src/asr/audio/: ingest.py
src/asr/backends/: base.py  crisperwhisper_engine.py
src/asr/dictionary/: __init__.py  db.py  discovery.py  manager.py  matcher.py  migrations.py  models.py  ner.py  prompt_generator.py  selector.py
src/asr/eval/: __init__.py  benchmark.py  metrics.py
src/asr/eval/datasets/: __init__.py  lovecraft.py
src/asr/models/: transcript.py
src/asr/nlp/: corrector.py  models.py  prompts.py
src/asr/output/: formatters.py
src/asr/vocabularies/: __init__.py  common_names.py  tech_terms.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_short.m4a
